crates/shipper-core/src/runtime/policy/snapshots/shipper_core__runtime__policy__serialization_snapshot_tests__all_policy_kinds.snap
---
source: crates/shipper/src/runtime/policy/mod.rs
expression: "vec![PolicyKind::Safe, PolicyKind::Balanced, PolicyKind::Fast,]"
---
- Safe
- Balanced
- Fast
