crates/shipper-core/src/runtime/policy/snapshots/shipper_core__runtime__policy__serialization_snapshot_tests__balanced_policy_effects_default.snap
---
source: crates/shipper-core/src/runtime/policy/mod.rs
expression: effects
---
run_dry_run: true
check_ownership: false
strict_ownership: false
readiness_enabled: true
