crates/shipper-core/src/runtime/policy/snapshots/shipper_core__runtime__policy__serialization_snapshot_tests__fast_policy_effects_default.snap
---
source: crates/shipper/src/runtime/policy/mod.rs
expression: effects
---
run_dry_run: false
check_ownership: false
strict_ownership: false
readiness_enabled: false
